syntax = "proto3";

package calculator;
option go_package = "pb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse { int32 result = 1; }

service calculator {
  rpc Sum(SumRequest) returns (SumResponse) {}
}